--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,4 +1,5 @@
-<h1>All of your Smooth Playlists</h1>
+<%= button_to "Create a New Playlist", new_playlist_path %>
+<h1>All of Your Smooth Playlists</h1>
 
 <ul>
   <% @playlists.each do |playlist| %>
