--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -15,3 +15,7 @@
     </li>
   <% end %>
 </ul>
+
+<%= button_to 'Remove', @playlist, method: :delete, data: { confirm: 'Are you sure?' } %>
+
+<%= button_to 'Edit', edit_playlist_path(@playlist), method: 'get'%>
