--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome! Here are your Smooth Playlists!</h1>
-<%
+<% @playlists.each do |playlist| %>
+    <%= link_to playlist.name, playlist_path %>
+<%end%>
