--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Songs#show</h1>
-<p>Find me in app/views/songs/show.html.erb</p>
+<h1>Song Details</h1>
+<h2><%= "Song: #{@song.name}" %></h2>
+<h4><%= "Genre: #{@song.genre}" %></h4>
+<h4><%= "Album: #{@song.album}" %></h4>
