--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,4 +1,4 @@
-<%= button_to "Create a New Playlist", new_playlist_path %>
+<%= button_to "Create a New Playlist", new_playlist_path, method: :get %>
 <h1>All of Your Smooth Playlists</h1>
 
 <ul>
