--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Songs#edit</h1>
-<p>Find me in app/views/songs/edit.html.erb</p>
+<h1>Edit Song Details</h1>
+<%= form_for @song do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %>
+    <%= f.label :album %>
+    <%= f.text_field :album %>
+    <%= f.label :genre %>
+    <%= f.text_field :genre %>
+    <%= f.submit %>
+<% end %>
