completing API hookup

--- a/app/views/playlists/edit.html.erb
+++ b/app/views/playlists/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Edit Your Playlist</h1>
-<%= form_for @playlist do |f| %>
-    <%= f.label :name %>:
-    <%= f.text_field :name %>
-    <%= f.submit %>
-<% end %>
+
+<%= render "form" %>
+
+
+
    
