--- a/app/views/playlists/new.html.erb
+++ b/app/views/playlists/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create a New Playlist</h1>
-<%= form_for @playlist do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.submit %>
-<% end %>
-   
+
+<%= render "form" %>
+
+
+
+
