--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,10 +1,4 @@
 <h1>Edit Song Details</h1>
-<%= form_for @song do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :album %>
-    <%= f.text_field :album %>
-    <%= f.label :genre %>
-    <%= f.text_field :genre %>
-    <%= f.submit %>
-<% end %>
+
+
+<%= render 'form' %>
