--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,12 +1,4 @@
 <h1>Add Song to Playlist</h1>
-<%= form_for @song do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :album %>
-    <%= f.text_field :album %>
-    <%= f.label :genre %>
-    <%= f.text_field :genre %>
-    <%= f.collection_select :city_id, City.all, :id, :name %>
-    <%= f.submit %>
 
-<% end %>
+
+<%= render 'form' %>
