completed authentication and added playist to user

--- a/app/views/playlists/index.html.erb
+++ b/app/views/playlists/index.html.erb
@@ -1,5 +1,5 @@
 <%= button_to "Create a New Playlist", new_playlist_path, method: :get %>
-<h1>All of Your Smooth Playlists</h1>
+<h1>Welcome to Smooth Sounds! Here Are All Of Your Smooth Playlists</h1>
 
 <ul>
   <% @playlists.each do |playlist| %>
