--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,3 +1,14 @@
+<% if flash[:errors] %>
+  <ul>
+    <% flash[:errors].each do |error_message| %>
+      <li>
+        <%= error_message %>
+      </li>
+    <% end %>
+  </ul>
+<% end %>
+
+
 <%= form_for @song do |f| %>
     <%= f.label :name %>
     <%= f.text_field :name %>
