--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -2,7 +2,13 @@
 
 
 <h1>Song Details</h1>
-<img src="<%= Song.artist_picture(@song.name, @song.album) %>" alt="Artist Photo" height="300" width="300">
+
+<% if Song.artist_picture(@song.name, @song.album) %>
+  <img src="<%= Song.artist_picture(@song.name, @song.album) %>" alt="Artist Photo" height="300" width="300">
+<% else %>
+  <img src="../../../public/image-not-found.png" alt="Artist Photo" height="300" width="300">  
+<% end %>
+
 
 
 <h2><%= "Song: #{@song.name}" %></h2>
